<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F4D03F"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Dragon image at top of page -->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/dragon" />

            <!-- Quiz name -->
            <TextView
                android:id="@+id/quiz_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_toRightOf="@id/logo"
                android:text="@string/quiz_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="52sp" />

            <!-- Lesson number -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/quiz_name"
                android:layout_gravity="center"
                android:layout_toRightOf="@id/logo"
                android:text="@string/lesson_info"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Instructions for q1 - q5 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/prompt_q1_q5" />

            <!-- Question 1 -->
            <RadioGroup
                android:id="@+id/question_group_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/question1" />

                <RadioButton
                    android:id="@+id/radio_q1_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q1_opt1" />

                <RadioButton
                    android:id="@+id/radio_q1_opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q1_opt2" />

                <RadioButton
                    android:id="@+id/radio_q1_opt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q1_opt3" />

            </RadioGroup>

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:background="#D91E18" />

            <!-- Question 2 -->
            <RadioGroup
                android:id="@+id/question_group_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/question2" />

                <RadioButton
                    android:id="@+id/radio_q2_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q2_opt1" />

                <RadioButton
                    android:id="@+id/radio_q2_opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q2_opt2" />

                <RadioButton
                    android:id="@+id/radio_q2_opt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q2_opt3" />

            </RadioGroup>

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:background="#D91E18" />

            <!-- Question 3 -->
            <RadioGroup
                android:id="@+id/question_group_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/question3" />

                <RadioButton
                    android:id="@+id/radio_q3_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q3_opt1" />

                <RadioButton
                    android:id="@+id/radio_q3_opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q3_opt2" />

                <RadioButton
                    android:id="@+id/radio_q3_opt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q3_opt3" />

            </RadioGroup>

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:background="#D91E18" />

            <!-- Question 4 -->
            <RadioGroup
                android:id="@+id/question_group_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/question4" />

                <RadioButton
                    android:id="@+id/radio_q4_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q4_opt1" />

                <RadioButton
                    android:id="@+id/radio_q4_opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q4_opt2" />

                <RadioButton
                    android:id="@+id/radio_q4_opt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q4_opt3" />

            </RadioGroup>

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:background="#D91E18" />

            <!-- Question 5 -->
            <RadioGroup
                android:id="@+id/question_group_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/question5" />

                <RadioButton
                    android:id="@+id/radio_q5_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q5_opt1" />

                <RadioButton
                    android:id="@+id/radio_q5_opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q5_opt2" />

                <RadioButton
                    android:id="@+id/radio_q5_opt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/q5_opt3" />

            </RadioGroup>

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:background="#D91E18" />

            <!-- Instruction to select 1 or more answers -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/prompt_q6_q7" />

            <!-- Question 6 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/question6" />

            <CheckBox
                android:id="@+id/checkbox_q6_opt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="4dp"
                android:text="@string/q6_opt1" />

            <CheckBox
                android:id="@+id/checkbox_q6_opt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="4dp"
                android:text="@string/q6_opt2" />

            <CheckBox
                android:id="@+id/checkbox_q6_opt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="4dp"
                android:text="@string/q6_opt3" />

            <CheckBox
                android:id="@+id/checkbox_q6_opt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="4dp"
                android:text="@string/q6_opt4" />

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:background="#D91E18" />

            <!-- Question 7 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/question7" />

            <CheckBox
                android:id="@+id/checkbox_q7_opt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="4dp"
                android:text="@string/q7_opt1" />

            <CheckBox
                android:id="@+id/checkbox_q7_opt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="4dp"
                android:text="@string/q7_opt2" />

            <CheckBox
                android:id="@+id/checkbox_q7_opt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="4dp"
                android:text="@string/q7_opt3" />

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:background="#D91E18" />

            <!-- Instruction to translate -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/prompt_q8" />

            <!-- Question 8 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/question8" />

            <EditText
                android:id="@+id/input_q8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#CF000F"
                android:textSize="24sp"
                android:textColor="#F4D03F"
                android:fontFamily="sans-serif"
                android:text="@string/submit_btn"
                android:onClick="submitQuiz" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>